<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Waved</string>
    <string name="action_settings">Settings</string>

    <!-- Welcome activity -->
    <string name="title_activity_welcome">Waved</string>
    <string name="welcome_tagline">The best way to have real conversations with your friends.</string>
    <string name="welcome_button">Start Talking</string>

    <!-- Phone Validation activity -->
    <string name="phone_validation_title">Phone Validation</string>
    <string name="phone_validation_subtitle">We use your phone number to log you in and connect you with friends.</string>
    <string name="phone_validation_hint">Country Code + Phone </string>
    <string name="phone_validation_example_phone">ex: +14155099283</string>
    <string name="phone_validation_loading_dialog">Loading...</string>
    <string name="phone_validation_invalid_phone_number">Invalid phone number, don\'t forget the country code!</string>
    <string name="phone_validation_problem">There has been a problem. Please check your connection and try again.</string>

    <!-- Code Confirmation activity -->
    <string name="code_confirmation_title">Enter Validation Code</string>
    <string name="code_confirmation_sms">We have sent you an SMS</string>
    <string name="code_confirmation_try_again">We will try again in</string>
    <string name="code_confirmation_second_sms">A second SMS has been sent.</string>
    <string name="code_confirmation_wrong_code">Invalid code, please try again.</string>

    <!-- Profile Picture activity -->
    <string name="title_activity_profile_picture">ProfilePictureActivity</string>
    <string name="profile_picture_add_picture">Add profile picture</string>
    <string name="profile_picture_camera_option">Take Photo</string>
    <string name="profile_picture_library_option">Choose from Library</string>
    <string name="profile_picture_library_select_from">Select from</string>

</resources>
