<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.waved.streetshout.waved.activities.PhoneValidationActivity">

    <TextView android:text="@string/phone_validation_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="25dp"
        android:fontFamily="sans-serif"
        android:textColor="@color/blue"/>

    <TextView android:text="@string/phone_validation_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="18dp"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:background="@color/darkBlue">

        <EditText
            android:id="@+id/phone_validation_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:hint="@string/phone_validation_hint"
            android:textColorHint="@color/whiteHint"
            android:textColor="@android:color/white"
            android:textSize="25dp"
            android:inputType="phone"
            android:background="#00000000"/>

        <Button
            android:id="@+id/phone_validation_validate_button"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:background="@color/blue"/>
    </LinearLayout>

    <TextView android:text="@string/phone_validation_example_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="18dp"/>

</LinearLayout>
