<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.waved.streetshout.waved.activities.CodeConfirmationActivity">

    <TextView android:text="@string/code_confirmation_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="25dp"
        android:fontFamily="sans-serif"
        android:textColor="@color/blue"/>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/code_confirmation_digit_1"
            android:text="1"
            android:textColor="@android:color/white"
            android:textSize="40dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/round_blue_shape"/>

        <View
            android:layout_width="20dp"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/code_confirmation_digit_2"
            android:text="2"
            android:textColor="@android:color/white"
            android:textSize="40dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/round_blue_shape"/>

        <View
            android:layout_width="20dp"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/code_confirmation_digit_3"
            android:text="3"
            android:textColor="@android:color/white"
            android:textSize="40dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/round_blue_shape"/>

        <View
            android:layout_width="20dp"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/code_confirmation_digit_4"
            android:text="4"
            android:textColor="@android:color/white"
            android:textSize="40dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/round_blue_shape"/>


    </LinearLayout>

    <TextView android:text="@string/code_confirmation_sms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="18dp"
        android:textColor="@color/lightGrey"/>

    <TextView android:id="@+id/code_confirmation_phone_number"
        android:text="+1 (415) 235-5866"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="18dp"/>

    <TextView android:id="@+id/code_confirmation_status"
        android:text="@string/code_confirmation_try_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="18dp"
        android:textColor="@color/lightGrey"/>

    <TextView android:id="@+id/code_confirmation_time_remaining"
        android:text="1:58"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="18dp"/>

    <EditText
        android:id="@+id/code_confirmation_edit_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:inputType="number"/>
</LinearLayout>
